@@ -12,6 +12,7 @@ date Version 3.00.51
 * FS#254 - "code duplicating."
 + FS#257 - "wxStaticBox inside a wxStaticBoxSizer lacks an id"
 * FS#261 - "wxMenuItem has no 'permission' property"
+* FS#265 - "wxID_PREFERENCES should not be redefined"
 
 09/27/2007 Version 3.00.50 (RC3)
 * FS#234 - "wxFrame name parameter not available."
